--- a/index.html
+++ b/index.html
@@ -478,6 +478,15 @@
                         </div>
                     </div>
 
+                    <div id="game-card-1" class="bg-gray-900 rounded-xl shadow-xl overflow-hidden transform hover:scale-105 transition-transform duration-300 group">
+                        <img id="game-card-1-img" src="https://i.imgur.com/6a2yBz1.png" alt="Arcade Rush Thumbnail" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2">Snake</h3>
+                            <p class="text-gray-400 mb-4">Snake</p>
+                            <a href="/snake.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
+                        </div>
+                    </div>
+
                     </div>
                 </div>
             </div>
