--- a/404.html
+++ b/404.html
@@ -1,1 +1,9 @@
 
+<!DOCTYPE html>
+<html>
+  <body>
+      <p>⚿404⚿</p>
+      <p></p>
+<p>ether our servers are down or you are not supost to be here<p>
+  </body>
+</html>
