--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +18,11 @@
   </style>
 </head>
 <body>
+<a href="https://www.example.com">
+    <button type="button">Go to Home Screen</button>
+</a>
+
+
 <canvas id="screen"></canvas>
 <script>
   const canvas = document.getElementById('screen');
@@ -201,6 +207,7 @@
 
     requestAnimationFrame(loop);
   }
+
 
   loop();
 </script>
