--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-<a href="https://www.example.com">
+<a href="https://stuffneststuff.github.io/stuffnest">
     <button type="button">Go to Home Screen</button>
 </a>
 
