--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2">Snake</h3>
                             <p class="text-gray-400 mb-4">Snake</p>
-                            <a href="/snake.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
+                            <a href="//snake.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
                         </div>
                     </div>
 
