--- a/index.html
+++ b/index.html
@@ -425,13 +425,13 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl font-bold text-center mb-12">Featured Games</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Game Card 1 (CFT) - This is the one with the click secret -->
+                    <!-- Game Card 1 () - This is the one with the click secret -->
                     <div id="game-card-1" class="bg-gray-900 rounded-xl shadow-xl overflow-hidden transform hover:scale-105 transition-transform duration-300 group">
                         <img id="game-card-1-img" src="https://i.imgur.com/6a2yBz1.png" alt="Arcade Rush Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2">CFT</h3>
+                            <h3 class="text-2xl font-semibold mb-2"></h3>
                             <p class="text-gray-400 mb-4">Capture The Flag</p>
-                            <a href="stuffnest.oneapp.dev/cft.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
+                            <a href="https://stuffnest.oneapp.dev//cft.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
                         </div>
                     </div>
                     <!-- Game Card 2 () - The hover secret is here -->
