--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2"></h3>
                             <p class="text-gray-400 mb-4">Capture The Flag</p>
-                            <a href="https://stuffnest.oneapp.dev//cft.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
+                            <a href="https://stuffnest.oneapp.dev/cft.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Play Now</a>
                         </div>
                     </div>
                     <!-- Game Card 2 () - The hover secret is here -->
