--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2">Chess</h3>
                             <p class="text-gray-400 mb-4">Chess is comming to town fully relesed on 12/20/25</p>
-                            <a href="/chess.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Try Now</a>
+                            <a href="https://stuffnest.oneapp.dev/chess.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Try Now</a>
                         </div>
                     </div>
                 
