--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     Stuffnest
                 </h1>
                 <p class="text-xl md:text-2xl text-gray-300 mb-8 max-w-2xl mx-auto">
-                    Discover and play thousands of free online games instantly. No downloads, just pure fun!
+                    HI
                 </p>
                 <a href="#" id="explore-games-btn" class="bg-gradient-to-r from-blue-500 to-purple-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300">
                     Explore Games
@@ -503,6 +503,14 @@
                             <h3 class="text-2xl font-semibold mb-2">Chess</h3>
                             <p class="text-gray-400 mb-4">Chess is comming to town fully relesed on 12/20/25</p>
                             <a href="https://stuffnest.oneapp.dev/chess.html?redirect=https://stuffneststuff.github.io/stuffnest/" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Try Now</a>
+                        </div>
+                    </div>
+                <div class="game-card bg-gray-900 rounded-xl shadow-xl overflow-hidden transform hover:scale-105 transition-transform duration-300 group">
+                        <img src="https://placehold.co/600x400/3498db/ecf0f1?text=Comming+Soon" alt="Flappy Bird thumbnail" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2">Chat</h3>
+                            <p class="text-gray-400 mb-4">More Chat</p>
+                            <a href="./chat.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-full transition-colors duration-300">Try Now</a>
                         </div>
                     </div>
                 
