--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝕾𝖙𝖚𝖋𝖋𝖓𝖊𝖘𝖙</title>
-    <link id="dynamic-favicon" rel="icon" type="image/png" href="https://lh3.googleusercontent.com/sitesv/AAzXCkdooyvQa4VchjEeV9bKMfWOGoUOq8ys0wkiNq4nmFiIW6DszHG8cRIH5ZEPPFk2wMcw5-WwSZmnrQi0_iFYbcAxeNvJlgOQAtKrfYzwK0x1noX5ToMTj_yXASRnHCpnhgoVLzr2tI9EJDjF9wFQx3wMKNrM45NbTU1UqMc-2YuuzcNotekvd4g98i8=w16383">  
+    <link id="dynamic-favicon" rel="icon" type="https://i.imgur.com/JIBqKBw.png">  
 
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -1656,7 +1656,7 @@ updateHeaderClock();
       return;
     }
     // Default favicon if no match
-    favicon.href = "https://lh3.googleusercontent.com/sitesv/AAzXCkdooyvQa4VchjEeV9bKMfWOGoUOq8ys0wkiNq4nmFiIW6DszHG8cRIH5ZEPPFk2wMcw5-WwSZmnrQi0_iFYbcAxeNvJlgOQAtKrfYzwK0x1noX5ToMTj_yXASRnHCpnhgoVLzr2tI9EJDjF9wFQx3wMKNrM45NbTU1UqMc-2YuuzcNotekvd4g98i8=w16383";
+    favicon.href = "https://i.imgur.com/JIBqKBw.png";
   }
 
   document.addEventListener('DOMContentLoaded', () => {
